# bzik

backup2016-02-17/presskeys/: .presskeys.cpp.swn  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  position  presskeys  presskeys.cpp
robot/: Makefile  a.out  cv2  direction  et  io  picamera  raspicam-0.0.7.tgz  robot  robot.cpp  robot.cpp.BACKUP2015-07-21  servator.py  time
robot/follow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  follow  follow.cpp
robot/followred/: CMakeCache.txt  CMakeLists.txt  Makefile  MakefileOLD  cmake_install.cmake  direction  followred.cpp  followred.cppBACKUP  followred.py
robot/presskeys/: .follow.cpp.swo  .keyboard1.csv.swp  .param.xml.swp  CMakeCache.txt  CMakeLists.txt  Makefile  keyboard1.csv  keyboard2.csv  param.xml  position  presskeys  presskeys.cpp  test  todo.txt  typemessage  typemessage.cpp  typemessage.par  writepos  writepos.cpp
robot/presskeys/training/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  paramOCV3.xml  prepare.sh  test  trainNetwork  trainNetwork.cpp  trainNetworkOCV3.cpp  training
robot/presskeys/training/tutorial/OpenCV Optical Character Recognition using Neural Network_files/: bootstrap.css  bwg_frontend.js  font-awesome.css  jquery-migrate.js  jquery_002.js  jquery_003.js  jquery_004.js  jquery_005.js  navigation.js  responsive.css  shAutoloader.js  shCore.css  shThemeMidnight.css  superfish.js
robot/raspicam-0.0.5/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Findraspicam.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
robot/raspicam-0.0.5/src/: Makefile  cmake_install.cmake  (+1 more)
robot/rpicamutils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  raspicam_cv_still_test.cpp
robot/simpletest_raspicam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  raspicam_image.ppm  simpletest_raspicam  simpletest_raspicam.cpp
training/: CMakeCache.txt  Makefile  cmake_install.cmake  test.cpp  testset.txt  trainNetwork  training  training.cpp
(+23 files in other folders)
